Fix student type input box alignment, class type radio responsive width (new radio element)

--- a/client/src/styles/application.css
+++ b/client/src/styles/application.css
@@ -119,7 +119,12 @@ div.search-input-group {
 	width: 30%;
 }
 
+section#student-count {
+	display: grid;
+}
+
 section#student-count > .inline-group > input {
+
 	position: relative;
 	left: 10px;
 	width: 55px;
@@ -631,7 +636,8 @@ div#legend {
 		width: 55%;
 	}
 	section#class-type {
-	    width: 47%;
+	    /*width: 47%;*/
+	    width: 70%;
 	    padding-left: 8em;
 	}
 
